--- a/uroomies-server/package.json
+++ b/uroomies-server/package.json
@@ -4,7 +4,8 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "node": "^22.7.0",
-    "nodemon": "^3.1.4"
+    "nodemon": "^3.1.4",
+    "pg": "^8.12.0"
   },
   "scripts": {
     "start": "node index.js",
