--- a/uroomies-server/package.json
+++ b/uroomies-server/package.json
@@ -3,9 +3,12 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "http": "^0.0.1-security",
     "node": "^22.7.0",
     "nodemon": "^3.1.4",
-    "pg": "^8.12.0"
+    "pg": "^8.12.0",
+    "socket.io": "^4.7.5",
+    "socketio": "^1.0.0"
   },
   "scripts": {
     "start": "node index.js",
